firefox: fix extra spacing in titlebar on linux
I'm not sure what changed (perhaps in the latest firefox update?). Given
the media queries, this *probably* won't impact other platforms.

--- a/config/firefox/chrome/window_control_placeholder_support.css
+++ b/config/firefox/chrome/window_control_placeholder_support.css
@@ -30,7 +30,7 @@ See the above repository for updates as well as full license text. */
 
 @media (-moz-gtk-csd-available) {
   :root:is([tabsintitlebar],[sizemode="fullscreen"]) {
-    --uc-window-control-width: 84px;
+    --uc-window-control-width: 44px;
   }
 }
 @media (-moz-platform: macos){
